<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_MoveCmd" Id="{f71cc9b7-cb4b-485a-9aed-2944bbd084ca}">
    <Declaration><![CDATA[TYPE ST_MoveCmd :
STRUCT
	/// common
	MoveType: DUT_Command_MoveType := DUT_Command_MoveType.DirectMove;
	Speed: LREAL := 0.0;
	CoordSystem: DUT_CoordSystem := DUT_CoordSystem.ACS;
	/// direct/linear moves
	PositionType: DUT_Command_PositionType := DUT_Command_PositionType.AbsolutePosition;
	CoordinateType: DUT_Command_CoordinateType := DUT_Command_CoordinateType.Literal;
	ArrayIndex: UINT := 0;
	ArrayType: DUT_Command_ArrayType := DUT_Command_ArrayType.StoredPosition;
	CoordRef: DUT_COORD_REF := (X := 0, Y := 0, Z := 0, A := 0, B := 0, C := 0);
	/// circular moves
	CircularCoordinateType: DUT_Command_CoordinateType := DUT_Command_CoordinateType.Literal;
	CircularArrayIndex: UINT := 0;
	CircularArrayType: DUT_Command_ArrayType := DUT_Command_ArrayType.StoredPosition;
	CircleMode: SMC_CIRC_MODE := SMC_CIRC_MODE.CENTER;
	PathChoice: MC_CIRC_PATHCHOICE := MC_CIRC_PATHCHOICE.mcCircPathChoiceClockwise;
	CoordRef2: DUT_COORD_REF := (X := 0, Y := 0, Z := 0, A := 0, B := 0, C := 0);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>